--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,17 @@
-fastapi==0.99.1
-python-dotenv==0.20.0 
-jinja2==3.1.2
+async_lru==2.0.4
+bcrypt==4.1.2
+coloredlogs==15.0.1
+email-validator==2.1.1
+fastapi==0.110.1
 gunicorn==21.2.0
-pydantic==1.10.9
-python-multipart==0.0.6
-pymongo[srv]==4.6.0
-uvicorn[standard]==0.23.2
-pytest==7.4.3
-email-validator==2.1.0
-bcrypt==4.1.1
+jinja2==3.1.3
+langchain==0.1.14
+loguru==0.7.2
+openai==1.16.1
+pydantic==2.6.4
+pymongo[srv]==4.6.3
+pytest==8.1.1
+python-dotenv==1.0.1
+python-multipart==0.0.9
+tiktoken==0.6.0
+uvicorn[standard]==0.29.0
