update readme file with create env and update constant with new env file

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,5 @@
-OPENAI_API_KEY=sk-xxx
+# AI-Related API Keys
+OPENAI_API_KEY=sk-xxxxxx
+
+# Database Keys
+DATABASE_URI=mongodb+srv://xxx:xxx@xxx.@cluster0.cbgkxvv.mongodb.net/
