setup qdrant vectordb for ai ops, update .env example file with vectordb required info

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,5 @@ OPENAI_API_KEY=sk-xxxxxx
 
 # Database Keys
 DATABASE_URI=mongodb+srv://xxx:xxx@xxx.@cluster0.cbgkxvv.mongodb.net/
+QDRANT_URI=https://xxxx
+QDRANT_API_KEY=xxxx
