--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,5 +14,6 @@ pymongo[srv]==4.6.3
 pytest==8.1.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
+qdrant-client==1.8.2
 tiktoken==0.6.0
 uvicorn[standard]==0.29.0
