--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ loguru==0.7.2
 openai==1.16.1
 pydantic==2.6.4
 pymongo[srv]==4.6.3
+PyPDF==4.1.0
 pytest==8.1.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
