add register, login, crud profile api

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,9 @@
 OPENAI_API_KEY=sk-xxxxxx
 
 # Database Keys
-DATABASE_URI=mongodb+srv://xxx:xxx@xxx.@cluster0.cbgkxvv.mongodb.net/
+DATABASE_URI=mongodb+srv://mylittlehusky2004:PDanii@279197.@cluster0.cbgkxvv.mongodb.net/
 QDRANT_URI=https://xxxx
 QDRANT_API_KEY=xxxx
+
+FROM_EMAIL=hello.aceresume@gmail.com
+EMAIL_PASSWORD=jndwyqdpgllcpzpx
