--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,10 @@
 async_lru==2.0.4
 bcrypt==4.1.2
+certifi==2024.2.2
 coloredlogs==15.0.1
 email-validator==2.1.1
 fastapi==0.110.1
+firebase-admin==6.5.0
 gunicorn==21.2.0
 jinja2==3.1.3
 langchain==0.1.14
@@ -11,9 +13,10 @@ loguru==0.7.2
 openai==1.16.1
 pydantic==2.6.4
 pymongo[srv]==4.6.3
-PyPDF==4.1.0
+PyPDF2==3.0.1
 pytest==8.1.1
 python-dotenv==1.0.1
+python-jobspy==1.1.15
 python-multipart==0.0.9
 qdrant-client==1.8.2
 tiktoken==0.6.0
