need fix: intergrate signin (422Error)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "axios": "^1.6.8",
     "firebase": "^10.11.0",
     "module-alias": "^2.2.3",
     "react": "^18.2.0",
