--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,10 @@
 # AI-Related API Keys
-OPENAI_API_KEY=sk-xxxxxx
+OPENAI_API_KEY=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
 
 # Database Keys
-DATABASE_URI=mongodb+srv://xxx:xxx@xxx.@cluster0.cbgkxvv.mongodb.net/
+DATABASE_URI=mongodb+srv://mylittlehusky2004:PDanii@279197.@cluster0.cbgkxvv.mongodb.net/
 QDRANT_URI=https://xxxx
 QDRANT_API_KEY=xxxx
 
-FROM_EMAIL=xxxx
-EMAIL_PASSWORD=xxxx
+FROM_EMAIL=hello.aceresume@gmail.com
+EMAIL_PASSWORD=jndwyqdpgllcpzpx
