--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ langchain-openai==0.1.1
 loguru==0.7.2
 openai==1.16.1
 pydantic==2.6.4
+PyJWT==2.8.0
 pymongo[srv]==4.6.3
 PyPDF2==3.0.1
 pytest==8.1.1
