--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "module-alias": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^8.0.0",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
