--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
-    "web-vitals": "^3.5.2",
+    "web-vitals": "^3.5.2"
 
   },
   "devDependencies": {
