--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,12 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "module-alias": "^2.2.3",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
@@ -30,8 +33,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
-    "web-vitals": "^3.5.2",
-
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
