add dockerfile to FE

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,10 @@ services:
       - DATABASE_URI=
       - FROM_EMAIL=
       - EMAIL_PASSWORD=
+
+    frontend:
+      build:
+        context: ./frontend/
+        dockerfile: ./Dockerfile
+      expose:
+      - 8081
