fix:reconfigure api key

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,7 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=YOUR_OPENAI
 
 # Database Keys
-DATABASE_URI=mongodb+srv://mylittlehusky2004:PDanii@279197.@cluster0.cbgkxvv.mongodb.net/
-QDRANT_URI=https://xxxx
-QDRANT_API_KEY=xxxx
+DATABASE_URI=YOUR_DATABASE_URI
 
-FROM_EMAIL=hello.aceresume@gmail.com
-EMAIL_PASSWORD=jndwyqdpgllcpzpx
+FROM_EMAIL=YOUR_EMAIL
+EMAIL_PASSWORD=YOUR_EMAIL_PASSWORD
