--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "axios": "^1.6.8",
-    "firebase": "^10.11.1",
+    "dotenv": "^16.4.5",
+    "firebase": "^11.0.1",
     "module-alias": "^2.2.3",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
@@ -33,8 +34,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
+    "ts-node": "^10.9.2",
     "web-vitals": "^3.5.2"
-
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
